cmake_minimum_required(VERSION 2.8)

add_executable(composed_1 composed_1.cpp)
target_link_libraries(composed_1 ${LIBS})

add_executable(composed_2 composed_2.cpp)
target_link_libraries(composed_2 ${LIBS})

add_executable(composed_3 composed_3.cpp)
target_link_libraries(composed_3 ${LIBS})

add_executable(composed_4 composed_4.cpp)
target_link_libraries(composed_4 ${LIBS})

add_executable(composed_5 composed_5.cpp)
target_link_libraries(composed_5 ${LIBS})

add_executable(composed_6 composed_6.cpp)
target_link_libraries(composed_6 ${LIBS})

add_executable(composed_7 composed_7.cpp)
target_link_libraries(composed_7 ${LIBS})

add_executable(composed_8 composed_8.cpp)
target_link_libraries(composed_8 ${LIBS})